--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "ldrs": "^1.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.1",
     "react-router-dom": "^7.1.4",
-    "react-toastify": "^11.0.3",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.0.2"
   },
